feat(event): product detail page

--- a/ficheproduit-rallonge-usb.html
+++ b/ficheproduit-rallonge-usb.html
@@ -67,7 +67,7 @@
                     <span class="colors"><img src="images/color1.gif" alt="" title="" border="0" /></span>
                     <span class="colors"><img src="images/color2.gif" alt="" title="" border="0" /></span>
                     <span class="colors"><img src="images/color3.gif" alt="" title="" border="0" /></span>                    </div>
-                    <a href="cart.html" class="more"><img src="images/order_now.gif" alt="" title="" border="0" /></a>
+                    <a onclick="gaButton('button', 'order now', 'product detail page')" href="cart.html" class="more"><img src="images/order_now.gif" alt="" title="" border="0" /></a>
                     <div class="clear"></div>
                     </div>
                     
