--- a/ficheproduit-rallonge-usb.html
+++ b/ficheproduit-rallonge-usb.html
@@ -67,7 +67,7 @@
                     <span class="colors"><img src="images/color1.gif" alt="" title="" border="0" /></span>
                     <span class="colors"><img src="images/color2.gif" alt="" title="" border="0" /></span>
                     <span class="colors"><img src="images/color3.gif" alt="" title="" border="0" /></span>                    </div>
-                    <a onclick="gaButton('button', 'order now', 'product detail page')" href="cart.html" class="more"><img src="images/order_now.gif" alt="" title="" border="0" /></a>
+                    <a href="cart.html" class="more"><img src="images/order_now.gif" alt="" title="" border="0" /></a>
                     <div class="clear"></div>
                     </div>
                     
@@ -80,8 +80,8 @@
             <div id="demo" class="demolayout">
 
                 <ul id="demo-nav" class="demolayout">
-                <li><a class="active" href="#tab1">More details</a></li>
-                <li><a class="" href="#tab2">Related products</a></li>
+                <li><a onclick="gaButton('button', 'more detail', 'product detail page')" class="active" href="#tab1">More details</a></li>
+                <li><a onclick="gaButton('button', 'related product', 'product detail page')" class="" href="#tab2">Related products</a></li>
                 </ul>
     
             <div class="tabs-container">
